--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "tsx scripts/import-data.ts",
+    "export-data": "tsx scripts/export-data.ts"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "cloudinary": "^2.9.0",
     "mongodb": "^5.9.0",
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
+    "next-cloudinary": "^6.17.5",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
   },
@@ -21,10 +25,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.23",
+    "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "^14.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
