--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "cloudinary": "^2.9.0",
+    "lucide-react": "^0.563.0",
     "mongodb": "^5.9.2",
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
