--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^5.9.2",
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
+    "playwright": "^1.58.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
   },
